Equality Lab: Fixed: The Reset All button should have the same position as in tab 1, it is currently tucked more in the corner.
Intro: Fixed: Thicker borders should be grayed out when nothing in the pie
Intro: Increased spacing between the cakes
Intro: Shrink the cup "icon" 10 percent or so to fit better in the icon button
Intro: Fixed: The cups are not centered in the display area
Intro: Shrink the vertical bar "icon" in the vertical direction and give it an aspect ratio more similar to the representation
Intro: Shrink the vertical bars somewhat vertically
Intro: Space the vertical bars a bit more horizontally
Intro: Increased the font size for the max number text
Intro: Vertically center the pie representations in the negative space between the icon bar and the top of the fraction
Equality Lab: Added an arrow pointing to the number line location because the ticks can get too close together to distinguish between them
Equality Lab: Increased vertical space between horizontal bars
# 0.00.49 (62179) Mar 5, 2012
First 2 tabs: Fixed: Clicking on an in-flight pie piece causes numerator to get out of sync, by making it so you can't drag an animating piece
Equality Lab: Fixed a bug that caused the highlight to cover up tick marks on the scaled number line
Equality Lab: Reduced the width of the horizontal bars, and reduced its bucket width to match the others
Fractions Intro: Changed all inner stroke widths to 1.0 while leaving the exterior stroke width thick
Fractions Intro: Removed unused cake code
Fractions Intro: Fixed: Cake container slices do not match up exactly with the slice locations
# 0.00.48 (62151) Mar 3, 2012
Matching Game: Rounded edges of the equals sign and tuned its size and stroke thickness
Matching Game: Reduced pitch by an octave
Matching Game: Change all representations to be blue and green
Matching Game: Moved "keep match" button to the side of the scale
Matching Game: Added "My Matches" text under the score cells